<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="390dp"
        android:layout_height="46dp"
        android:background="@drawable/firstbutton"
        android:text="Concern Letter / Testimonial"
        android:textAllCaps="false"
        android:textColor="#FA71CD"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <Button
        android:id="@+id/button2"
        android:layout_width="390dp"
        android:layout_height="46dp"
        android:background="@drawable/secondbutton"
        android:text="@string/application_for_diploma"
        android:textAllCaps="false"
        android:textColor="#FA71CD"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />

    <Button
        android:id="@+id/button3"
        android:layout_width="390dp"
        android:layout_height="46dp"
        android:layout_marginBottom="508dp"
        android:background="@drawable/thirdbutton"
        android:text="@string/final_defense"
        android:textAllCaps="false"
        android:textColor="#FA71CD"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="390dp"
        android:layout_height="46dp"
        android:layout_marginBottom="452dp"
        android:background="@drawable/fourthbutton"
        android:text="@string/internship_letter"
        android:textAllCaps="false"
        android:textColor="#FA71CD"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="390dp"
        android:layout_height="46dp"
        android:layout_marginBottom="396dp"
        android:background="@drawable/fifthbutton"
        android:text="@string/late_registration"
        android:textAllCaps="false"
        android:textColor="#FA71CD"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button6"
        android:layout_width="390dp"
        android:layout_height="46dp"
        android:layout_marginBottom="340dp"
        android:background="@drawable/sixthbutton"
        android:text="@string/semester_drop"
        android:textAllCaps="false"
        android:textColor="#FA71CD"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>